<?php
namespace App\Models;
use Illuminate\Database\Eloquent\Model;
class Brief extends Model {
    protected $table = 'briefs';
    protected $fillable = ['freelancer_id', 'category_id', 'title', 'description', 'images', 'price', 'duration'];
    protected $casts = ['images' => 'array'];
    protected $appends = ['likes_count', 'comments_count', 'is_liked', 'is_favorited'];

    public function freelancer() { return $this->belongsTo(User::class, 'freelancer_id'); }
    public function category() { return $this->belongsTo(Category::class); }
    public function categories() { return $this->belongsToMany(Category::class, 'brief_categories', 'brief_id', 'category_id'); }
    public function likes() { return $this->hasMany(BriefLike::class, 'brief_id'); }
    public function comments() { return $this->hasMany(BriefComment::class, 'brief_id'); }
    public function favorites() { return $this->hasMany(BriefFavorite::class, 'brief_id'); }

    public function getLikesCountAttribute() { return $this->attributes['likes_count'] ?? $this->likes()->count(); }
    public function getCommentsCountAttribute() { return $this->attributes['comments_count'] ?? $this->comments()->count(); }
    public function getIsLikedAttribute() {
        $userId = auth()->id();
        return $userId ? $this->likes()->where('user_id', $userId)->exists() : false;
    }
    public function getIsFavoritedAttribute() {
        $userId = auth()->id();
        return $userId ? $this->favorites()->where('user_id', $userId)->exists() : false;
    }
}
