<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Model;

class Category extends Model
{
    protected $fillable = ['name', 'parent_id'];

    public function children()
    {
        return $this->hasMany(Category::class, 'parent_id');
    }

    public function parent()
    {
        return $this->belongsTo(Category::class, 'parent_id');
    }

    public function missions()
    {
        return $this->hasMany(Mission::class);
    }

    public function briefs()
    {
        return $this->hasMany(Brief::class);
    }
}
