<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    public function up(): void
    {
        Schema::create('brief_categories', function (Blueprint $table) {
            $table->foreignId('brief_id')->constrained('briefs')->onDelete('cascade');
            $table->foreignId('category_id')->constrained('categories')->onDelete('cascade');
            $table->primary(['brief_id', 'category_id']);
        });
    }

    public function down(): void
    {
        Schema::dropIfExists('brief_categories');
    }
};
