<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    public function up(): void
    {
        Schema::create('mission_category', function (Blueprint $table) {
            $table->foreignId('mission_id')->constrained('missions')->onDelete('cascade');
            $table->foreignId('category_id')->constrained('categories')->onDelete('cascade');
            $table->primary(['mission_id', 'category_id']);
        });
    }

    public function down(): void
    {
        Schema::dropIfExists('mission_category');
    }
};
